--- a/src/main/resources/templates/allArticles.html
+++ b/src/main/resources/templates/allArticles.html
@@ -40,21 +40,20 @@
                 <i class="fas fa-search"></i>
             </span>
     </div>
-    <ul class="nav navbar" sec:authorize="isAuthenticated()" >
-        <form th:action="@{/logout}" method="post" style="max-width: 400px; margin-top: -35px; margin-left: 1660px">
-            <button class="btn btn-default" type="submit" value="Logout">
-                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right" fill="currentColor"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                          d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/>
-                    <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/>
-                    <path fill-rule="evenodd"
-                          d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z"/>
-                </svg>
-                Çıkış
-            </button>
-        </form>
-    </ul>
+    <div class="dropdown" style="float: right; margin-top: -35px">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="true">
+            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+            <li><a href="/admin/onayBekleyenler">Onay Bekleyenler</a></li>
+            <li><a href="/admin/allStaff">Tüm Personeller</a></li>
+            <li><a href="/admin/allArticles">Tüm Makaleler</a></li>
+            <li><a href="/admin/allProjects">Tüm Projeler</a></li>
+            <li><a href="/logout">Çıkış</a></li>
+        </ul>
+    </div>
 </nav>
 
 <main class="container">
