--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,14 +23,15 @@
 </head>
 <body class="container-fluid">
 
-<nav class="navbar navbar-light" style="background-color: #428bca; height: 72px">
-    <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
-         width="70" height="70" alt=""
-         style="margin-left: 10px; margin-right: 200px"/>
-    <p class="text-center" style="font-size: xx-large; font-style: normal; color: white; margin-top: -60px">ARVED</p>
-    <img src="https://upload.wikimedia.org/wikipedia/tr/5/5f/Ankara_%C3%9Cniversitesi_logosu.png"
-         width="70" height="70" alt=""
-         style="margin-left: 1670px; margin-top: -80px"/>
+<nav class="navbar navbar-light" style="background-color: #003C70; height: 72px">
+    <img src="../static/images/AU_logo.png"
+         width="70" height="70" alt="" th:src="@{images/AU_logo.png}"
+         style="float: left"/>
+    <p class="text-center" style="font-size: xx-large; font-style: normal; color: white; margin-top: 10px">Bilgisayar Mühendisliği
+        Araştırma Verilerinin Değerlendirilmesi Sistemi</p>
+    <img src="../static/images/muhendislik_fak_logo.png"
+         width="70" height="70" alt="" th:src="@{images/muhendislik_fak_logo.png}"
+         style="float: right; margin-top: -65px"/>
 </nav>
 <nav class="navbar navbar-light" style="margin-top:-19px; height: 72px; border-color: gainsboro">
     <div class="input-group rounded" style="width: 500px; margin: auto; margin-top: 15px">
@@ -40,21 +41,26 @@
                 <i class="fas fa-search"></i>
             </span>
     </div>
-    <div class="dropdown" style="float: right; margin-top: -35px">
-        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="true">
-            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
-            <li><a href="/staff/allStaff">Tüm Personeller</a></li>
-            <li><a href="/article/allArticles">Tüm Makaleler</a></li>
-            <li><a href="/project/allProjects">Tüm Projeler</a></li>
-            <li><a href="/logout">Çıkış</a></li>
-        </ul>
-    </div>
+    <ul class="nav navbar" sec:authorize="isAuthenticated()" >
+        <form th:action="@{/logout}" method="post" style="max-width: 400px; margin-top: -35px; margin-left: 1660px">
+            <button class="btn btn-default" type="submit" value="Logout">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-box-arrow-right" fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          d="M11.646 11.354a.5.5 0 0 1 0-.708L14.293 8l-2.647-2.646a.5.5 0 0 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0z"/>
+                    <path fill-rule="evenodd" d="M4.5 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5z"/>
+                    <path fill-rule="evenodd"
+                          d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z"/>
+                </svg>
+                Çıkış
+            </button>
+        </form>
+    </ul>
 </nav>
-
+<nav class="navbar navbar-light" style="width: 500px; margin: auto">
+    <div></div>
+    <div></div>
+</nav>
 <main class="container">
     <div class="table table-bordered">
         <table class="table table-hover">
@@ -66,7 +72,7 @@
                 <th>Scopus Atıf Sayısı</th>
                 <th>Uzmanlık Alanı</th>
                 <th>
-                    <a th:href="@{'/staffInformation/update'}" target="_blank" class="btn btn-primary">
+                    <a th:href="@{'/staffInformation/update'}" target="_blank" class="btn btn-primary" style="float: right; background-color: #003C70">
                         <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Güncelle</a>
                 </th>
             </tr>
@@ -82,6 +88,10 @@
             </tbody>
         </table>
     </div>
+    <nav class="navbar navbar-light" style="width: 500px; margin: auto">
+        <div></div>
+        <div></div>
+    </nav>
     <div class="table table-bordered">
         <table class="table table-hover">
             <thead>
@@ -92,8 +102,10 @@
                 <th class="col"></th>
                 <th class="col"></th>
                 <th class="col"></th>
+                <th class="col"></th>
+                <th class="col"></th>
                 <th class="col">
-                    <a href="/article/add" class="btn btn-default" style="margin-right: auto">
+                    <a href="/article/add" class="btn btn-default" style="float: right">
                         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Makale Ekle</a>
 
                 </th>
@@ -113,7 +125,7 @@
                 <td><a th:href="@{'/article/detail' + ${article.makaleId}}"  class="btn btn-default" data-toggle="modal" data-target="#exampleModalCenter">
                     <span class="glyphicon glyphicon-search" aria-hidden="true"></span>Detay</a>
                 </td>
-                <td><a th:href="@{'/article/update/' + ${article.makaleId}}" target="_blank" class="btn btn-primary">
+                <td><a th:href="@{'/article/update/' + ${article.makaleId}}" target="_blank" class="btn btn-primary" style="background-color: #003C70">
                     <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Güncelle</a></td>
                 <td>
                     <form th:action="'/article/delete/'+ ${article.makaleId}" th:method="post">
@@ -126,6 +138,10 @@
             </tbody>
         </table>
     </div>
+    <nav class="navbar navbar-light" style="width: 500px; margin: auto">
+        <div></div>
+        <div></div>
+    </nav>
     <div class="table table-bordered">
         <table class="table table-hover">
             <thead>
@@ -137,7 +153,7 @@
                 <th class="col"></th>
                 <th class="col"></th>
                 <th class="col">
-                    <a href="/project/add" class="btn btn-default">
+                    <a href="/project/add" class="btn btn-default" style="float: right">
                         <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Proje Ekle</a>
                 </th>
             </tr>
@@ -152,7 +168,7 @@
                 <td th:text="${project.projeDurumu}">Table cell</td>
                 <td></td>
                 <td></td>
-                <td><a th:href="@{'/project/update/' + ${project.projeId}}" target="_blank" class="btn btn-primary" style="margin-right: 0">
+                <td><a th:href="@{'/project/update/' + ${project.projeId}}" target="_blank" class="btn btn-primary" style="background-color: #003C70">
                     <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Güncelle</a></td>
                 <td>
                     <form th:action="'/project/delete/' + ${project.projeId} "  th:method="post">
